texi2html/test/invalid/res_info/texi_invalid_command_in_table/invalid_command_in_table.texi.first
\input texinfo @c -*-texinfo-*-

@setfilename invalid_command_in_table.info

@node Top
Top node

@table
{ @itemTop,, title
long title}
Item line
@end table

@bye
